gccida/c1/layout_decl
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_decl/src/stor-layout.c:804:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_decl/src/stor-layout.c:805:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_decl/src/stor-layout.c:806:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_decl/src/stor-layout.c:807:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_decl/src/stor-layout.c:813:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_decl/src/stor-layout.c:814:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_decl/src/stor-layout.c:887:13: error: must use 'enum' tag to refer to type 'mode_class'
&& *( const mode_class *)( ( char *)mode_class_0 + ( ( *( ( _DWORD *)&type->type + 15) >> 7) & 0x1FC)) == MODE_INT ) 
            ^
            enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_decl/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_decl/src/stor-layout.c:887:37: error: use of undeclared identifier 'mode_class_0'
&& *( const mode_class *)( ( char *)mode_class_0 + ( ( *( ( _DWORD *)&type->type + 15) >> 7) & 0x1FC)) == MODE_INT ) 
                                    ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/layout_decl/src/obj/stor-layout.o] Error 1
